# filesystem-mcp

./: .coverage  CHANGELOG.md  README.md  codemcp.toml  pyproject.toml  pytest.ini  test_fuzzy_search.py  test_stdio_fuzzy_search.py  test_with_dirs.json  test_without_dirs.json
docs/: PRD.md  milestone.md
examples/: test_commands.json
src/spiderfs_mcp/: __init__.py  __main__.py  file_reader.py  server.py
src/spiderfs_mcp/api/: file.py  search.py
src/spiderfs_mcp/console/: main.py
src/spiderfs_mcp/file/: reader.py  streamer.py  writer.py
src/spiderfs_mcp/search/: fzf.py  python_search.py  ripgrep.py
tests/: test_file_api.py  test_file_reader.py  test_file_streamer.py  test_file_write_api.py  test_file_writer.py  test_fzf_search.py  test_python_search.py  test_ripgrep_search.py  test_search_api.py  test_server.py
