[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "spiderfs_mcp"
version = "0.2.0"
description = "SpiderFS Master Control Program"
requires-python = ">=3.10"
dependencies = [
  "charset-normalizer>=3.4.1",
  "click>=8.1.8",
  "mcp>=1.6.0",
  "pytest>=8.3.5",
  "pywin32; sys_platform == 'win32'",
]

[project.scripts]
spiderfs-mcp = "spiderfs_mcp:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v --cov=spiderfs_mcp --cov-report=term-missing"

[tool.coverage.run]
source = ["src/spiderfs_mcp"]
omit = ["tests/*"]
